--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "next": "14.1.3",
     "react": "^18",
+    "react-circular-progressbar": "2.1.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-circular-progressbar": "2.1.0"
+    "recharts": "^2.12.3"
   },
   "devDependencies": {
     "@types/node": "^20",
