--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "@reduxjs/toolkit": "^2.2.2",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-circular-progressbar": "2.1.0",
+    "react-click-outside-hook": "^1.1.1",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "recharts": "^2.12.3"
+    "react-redux": "^9.1.0",
+    "recharts": "^2.12.3",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-click-outside-hook": "^1.0.3",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
